added static loader for atlas files, load from static/assets

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Jens",
   "license": "ISC",
   "dependencies": {
+    "parcel-plugin-static-files-copy": "^2.5.0",
     "phaser": "^3.20.1"
   },
   "devDependencies": {
