--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A Phaser 3 game example using Parcel bundler",
   "main": "src/index.html",
   "scripts": {
-    "build": "parcel build src/index.html -d docs/ --public-url /te18-speltut --experimental-scope-hoisting",
-    "watch": "parcel watch src/index.html -d docs/",
-    "start": "parcel serve src/index.html -d docs/",
-    "clean": "rm -v dist/*",
+    "build": "rm -vr docs/* && parcel build src/index.html -d docs/ --public-url /te18-speltut --experimental-scope-hoisting",
+    "watch": "parcel watch src/index.html",
+    "start": "parcel serve src/index.html",
+    "clean": "rm -vr dist/* && rm -vr docs/*",
     "test": "npx eslint src"
   },
   "author": "Jens",
