--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A Phaser 3 game example using Parcel bundler",
   "main": "src/index.html",
   "scripts": {
-    "build": "rm -vr docs/* && parcel build src/index.html -d docs/ --public-url /te18-speltut --no-scope-hoist",
-    "watch": "parcel watch src/index.html",
+    "build": "parcel build src/index.html -d docs/ --public-url /te18-speltut --experimental-scope-hoisting",
+    "watch": "parcel watch src/index.html -d dist/",
     "start": "parcel serve src/index.html",
     "clean": "rm -vr dist/* && rm -vr docs/*",
     "test": "npx eslint src"
@@ -13,8 +13,8 @@
   "author": "Jens",
   "license": "MIT",
   "dependencies": {
-    "parcel-plugin-static-files-copy": "^2.5.0",
-    "phaser": "^3.20.1"
+    "parcel-plugin-static-files-copy": "^2.5.1",
+    "phaser": "^3.52.0"
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
